--- a/src/main/resources/templates/result.html
+++ b/src/main/resources/templates/result.html
@@ -12,12 +12,13 @@
         <div class="container justify-content-center w-50 p-3" style="margin-top: 5em;" th:if="${successMessage}">
             <div class="alert alert-success fill-parent">
                 <h1 class="display-5" id="success">Success</h1>
-                <span th:text="${successMessage}">Your changes were successfully saved.Click <a th:href="@{/home}">here</a> to continue.</span>
+                <span th:text="${successMessage}">Your changes were successfully saved.</span>
+                    Click <a th:href="@{/home}">here to return to Home Page</a>
             </div>
             <div class="alert alert-danger fill-parent" th:if="${errorMessage}">
                 <h1 class="display-5">Error</h1>
                 <span th:text="${errorMessage}">Example Error Message</span>
-                <span>Click <a th:href="@{/home}">here</a> to continue.</span>
+                <span>Click <a th:href="@{/home}">here</a> to return to Home Page.</span>
             </div>
         </div>
     </body>
