--- a/src/main/resources/templates/error-500.html
+++ b/src/main/resources/templates/error-500.html
@@ -5,7 +5,7 @@
     <title>500</title>
 </head>
 <body>
-<h1> Oops! Something went wrong </h1>
+<h1> Oooooops! Something went wrong </h1>
 
 <h2>We're fixing it.</h2>
 
